--- a/source/index.html
+++ b/source/index.html
@@ -150,11 +150,8 @@
                   ул. Большая Конюшенная, д. 19/8 Санкт-Петербург
                 </p>
               </div>
-  	          <iframe src="https://www.w3schools.com" width="320" height="363"
-                     allowfullscreen>
-              </iframe>
-  	        <span class="about-logo  about-logo--more contacts__about-logo">
-            </span>
+  	          <iframe src="https://www.w3schools.com" width="320" height="363"></iframe>
+  	        <span class="about-logo  about-logo--more contacts__about-logo"></span>
            </div>
 
             <div class="page-footer__social social ">
