Burger links were added

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -16,13 +16,13 @@
           <div class="menu__category visually-hidden">
               <ul>
                 <li class="menu__item">
-                  <a class="menu__link" href="#"></a>
+                  <a class="menu__link" href="index.html">Главная</a>
                 </li>
                 <li class="menu__item">
-                  <a class="menu__link" href="#"></a>
+                  <a class="menu__link" href="form.html">Cделать заявку</a>
                 </li>
                 <li class="menu__item">
-                  <a class="menu__link" href="#"></a>
+                  <a class="menu__link" href="catalog.html">Каталог товаров</a>
                 </li>
               </ul>
           </div>
