The shortcomings from the previous task were eliminated

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Кэт энерджи</title>
+    <link href="./css/style.css" rel="stylesheet">
   </head>
   <body>
     <header class="page-header">
@@ -33,7 +34,7 @@
           <li class="page-catalog__item catalog-item">
             <div class="catalog-item__info">
               <a class="catalog-item__link" href="chicken-small.html">
-                <img class="catalog-item__img" src="" alt="alt">банка Cat Energy Pro 500 г
+                <img class="catalog-item__img" src="" alt="банка Cat Energy Pro 500 г">
               </a>
               <a class="catalog-item__link" href="chicken-small.html">
                 <h3 class="catalog-item__title">Cat Energy Pro 500 г</h3>
@@ -172,8 +173,8 @@
         </ul>
 
         <div class="page-catalog__more more">
-          <a class="button button--upload-items" href=""></a>
-          <b class="more__promo-title">показать еще 100500 товаров</b>
+          <a class="button button--upload-items" href="">+</a>
+          <h3 class="more__promo-title">показать еще 100500 товаров</h3>
           <p class="more__proviso">На самом деле вкусов гораздо больше!</p>
           <a class="button button--show-more" href="#">показать все</a>
         </div>
