--- a/source/index.html
+++ b/source/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Кэт энерджи</title>
+    <link href="./css/style.css" rel="stylesheet">
   </head>
   <body>
     <header class="page-header">
@@ -55,24 +56,16 @@
         <h1 class="features__title">Как это работает</h1>
         <ul class="items features__items">
           <li class="feature feature--healthy">
-            <p class="feature__info">
               Функциональное питание содержит только полезные питательные вещества.
-            </p>
           </li>
           <li class="feature feature__easy-cooking">
-            <p class="feature__info">
               Выпускается в виде порошка, которые нужно лишь залить кипятком и готово.
-            </p>
           </li>
           <li class="feature feature__apply">
-            <p class="feature__info">
               Замените один-два приема обычной еды на наше функциональное питание.
-            </p>
           </li>
           <li class="feature feature-quick">
-            <p class="feature__info">
               Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!
-            </p>
           </li>
         </ul>
       </article>
@@ -81,7 +74,6 @@
         <h1 class="proof__title">Живой пример</h1>
         <p class="proof__text">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Сat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.
         </p>
-        <div class="proof__cases">
           <dl class="proof__case-item">
             <dt class="proof__case-number">5 кг</dt>
             <dd class="proof__case-description">Снижение веса</dd>
@@ -90,7 +82,6 @@
             <dt class="proof__case-number">60 ДНЕЙ</dt>
             <dd class="proof__case-description">затрачено времени</dd>
           </dl>
-        </div>
 
         <h3 class="food-price">затраты на питание: 15 000 руб.</h3>
         <img class="before-img" src="" alt="Фото-пруф кота до изменения">
